// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> <Button /> icons should render the add back 1`] = `
.c0 {
  height: 30px;
  padding: 0 30px;
  font-family: 'Lato';
  font-weight: 600;
  font-size: 13px;
  line-height: 1.6rem;
  border-radius: 3px;
  cursor: pointer;
  outline: 0;
  background-image: linear-gradient(to right top,#306ded,#2f78f1,#3283f3,#3a8ef6,#4598f7);
  color: #ffffff;
  border: 0;
}

.c0:hover {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0:active {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0::before {
  font-family: 'FontAwesome';
  font-weight: 600;
  font-size: 13px;
  margin-right: 8px;
  line-height: 1.8rem;
  display: inline-block;
  vertical-align: middle;
}

.c0::before {
  content: '\\f053';
}

<button
  className="c0"
  color="primary"
  type="button"
/>
`;

exports[`<Button /> <Button /> icons should render the add icon 1`] = `
.c0 {
  height: 30px;
  padding: 0 30px;
  font-family: 'Lato';
  font-weight: 600;
  font-size: 13px;
  line-height: 1.6rem;
  border-radius: 3px;
  cursor: pointer;
  outline: 0;
  background-image: linear-gradient(to right top,#306ded,#2f78f1,#3283f3,#3a8ef6,#4598f7);
  color: #ffffff;
  border: 0;
}

.c0:hover {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0:active {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0::before {
  font-family: 'FontAwesome';
  font-weight: 600;
  font-size: 13px;
  margin-right: 8px;
  line-height: 1.8rem;
  display: inline-block;
  vertical-align: middle;
}

.c0::before {
  content: '\\f067';
  margin-right: 13px;
}

<button
  className="c0"
  color="primary"
  type="button"
/>
`;

exports[`<Button /> <Button /> icons should render the add trash 1`] = `
.c0 {
  height: 30px;
  padding: 0 30px;
  font-family: 'Lato';
  font-weight: 600;
  font-size: 13px;
  line-height: 1.6rem;
  border-radius: 3px;
  cursor: pointer;
  outline: 0;
  background-image: linear-gradient(to right top,#306ded,#2f78f1,#3283f3,#3a8ef6,#4598f7);
  color: #ffffff;
  border: 0;
}

.c0:hover {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0:active {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0::before {
  font-family: 'FontAwesome';
  font-weight: 600;
  font-size: 13px;
  margin-right: 8px;
  line-height: 1.8rem;
  display: inline-block;
  vertical-align: middle;
}

.c0::before {
  content: '';
  background-image: url(IMAGE_MOCK);
  background-repeat: no-repeat;
  background-position: left;
  width: 11px;
  height: 12px;
}

<button
  className="c0"
  color="primary"
  type="button"
/>
`;
